@@ -43,6 +43,7 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -205,7 +206,7 @@ public class AsyncLineageProducerClientTest {
     statusBuilder.addAllDetails(
         Arrays.stream(reasons)
             .map(r -> Any.pack(ErrorInfo.newBuilder().setReason(r).build()))
-            .toList());
+            .collect(Collectors.toList()));
     return StatusProto.toStatusException(statusBuilder.build());
   }
 }
